# grpc_node_plugin-repro

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json
.github/workflows/: ci.yaml
backend/proto-lib/: BUILD.bazel  package.json  question.proto  test.proto
tools/: bazel_deps.bzl
